--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="{{ if .IsHome }}{{ .Site.Params.otherURL }}{{ else }}{{ .Permalink }}{{ end }}">
     <meta property="og:title" content="{{ .Site.Title }}">
     <meta property="og:description" content="{{ with .Site.Params.description }}{{ . }}{{ end }}">
-    <meta property="og:image" content='{{ "images/hydrotherapie-eaux-vives.jpg" | absURL }}'>
+    <meta property="og:image" content='{{ "images/hydrotherapie-eaux-vives.webp" | absURL }}'>
     <meta property="og:locale" content="{{ .Site.LanguageCode }}">
     <meta property="og:type" content="website">
     <script type="application/ld+json">
